Fix serial device PID and VID parsing

Serial device's PID and VID contain hex digits, this patch
fixed the code which parses it by adding "a-fA-F" to the
regular expression.

BUG=599101

Review URL: https://codereview.chromium.org/1848963002

Cr-Commit-Position: refs/heads/master@{#384414}

Former-commit-id: 66ecade99de4820622281ce4a17e511a4b6aa404